Bug 466709 - Software Sources not working
Summary: Software Sources not working
Status: RESOLVED FIXED
Alias: None
Product: neon
Classification: KDE Neon
Component: Packages User Edition (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Neon Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-02 11:38 UTC by Torsten Wohlfarth (TUXEDO)
Modified: 2023-05-14 23:28 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.6
Sentry Crash Report:


Attachments
screenshot/terminal issue (223.26 KB, image/png)
2023-03-13 14:33 UTC, Davius Ikse
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Torsten Wohlfarth (TUXEDO) 2023-03-02 11:38:07 UTC
SUMMARY

When i click on Settings ==> Software Sources nothing happens, no password dialog, no start of software-properties-qt.
If i start Discover from Konsole, only thing i see

Could not start "/usr/share/applications/software-properties-qt.desktop"

STEPS TO REPRODUCE
1. Start Discover
2. go to Settings
3. click on Software Sources

OBSERVED RESULT

nothing happens

EXPECTED RESULT

software-properties-qt should start

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version:  5.27.2
KDE Frameworks Version:  5.103.0
Qt Version:  5.15.8

ADDITIONAL INFORMATION

All KDE/Plasma packages from KDE NEON
Comment 1 Nate Graham 2023-03-02 21:18:53 UTC
The fact that it doesn't exist or can't be launched is a Neon bug, but we should at least display an error in the UI. Let's track this in Bug 466742.
Comment 2 Torsten Wohlfarth (TUXEDO) 2023-03-03 09:21:02 UTC
The same behavior is in debian unstable.
The file exist, but no clue, why it can't launched.
Comment 3 Torsten Wohlfarth (TUXEDO) 2023-03-06 09:10:52 UTC
Another test in Kubuntu 23.04 (beta) is showing tha same.
Clicking on "Software Sources" in Discover and nothing happens.
Comment 4 Davius Ikse 2023-03-13 14:22:13 UTC
Bug on Lunar 23.04 / Debian 12
Comment 5 Davius Ikse 2023-03-13 14:33:10 UTC
Created attachment 157234 [details]
screenshot/terminal issue

The software source aka software-properties-qt don't work from plasma-discover (Debian 12) Same on Lunar (ubuntu 23.04)
Comment 6 Bug Janitor Service 2023-05-14 20:54:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/549
Comment 7 Bug Janitor Service 2023-05-14 21:32:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/551
Comment 8 Aleix Pol 2023-05-14 21:32:45 UTC
Git commit 6c8de3a57e33f4f6e2713c649ade5fcf0c9320f9 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 14/05/2023 at 21:28.
Pushed by apol into branch 'master'.

pk: Actually start the launch job

Otherwise we don't get the app.

M  +1    -0    libdiscover/backends/PackageKitBackend/PackageKitSourcesBackend.cpp

https://invent.kde.org/plasma/discover/commit/6c8de3a57e33f4f6e2713c649ade5fcf0c9320f9
Comment 9 Aleix Pol 2023-05-14 21:34:50 UTC
Git commit c9d1f794a4c923a803b9549897f768cb58a7390d by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 14/05/2023 at 21:31.
Pushed by apol into branch 'Plasma/5.27'.

pk: Actually start the launch job

Otherwise we don't get the app.


(cherry picked from commit 6c8de3a57e33f4f6e2713c649ade5fcf0c9320f9)

M  +1    -0    libdiscover/backends/PackageKitBackend/PackageKitSourcesBackend.cpp

https://invent.kde.org/plasma/discover/commit/c9d1f794a4c923a803b9549897f768cb58a7390d