pk: Actually start the launch job

Otherwise we don't get the app.

BUG: 466709